Finalizado backend+frontend de categorias implementados mutuamente. Se ha termiando también el frontend de autores con la paginacion activa a falta del backend.

--- a/Back-End/demo/src/main/resources/application.yml
+++ b/Back-End/demo/src/main/resources/application.yml
@@ -16,3 +16,9 @@ spring:
         show-sql: true
         hibernate:
             ddl-auto: update
+    devtools:
+        restart:
+            enabled: true
+            additional-paths: src/main/java
+        livereload:
+            enables: true
